--- a/src/Components/list.module.scss
+++ b/src/Components/list.module.scss
@@ -22,13 +22,13 @@
 .categories_grid{
     background-color: rgb(35, 28, 37);
     display: grid;
-    grid-template-columns: repeat(4, fit-content(8ch));
+    grid-template-columns: repeat(4, fit-content(25%));
     list-style-type: none; 
     justify-content: center;
-    padding: 20px 0;
-    grid-gap: 10px;
+    padding: 20px;
+    grid-gap: 20px;
     @media (max-width: 767px){
-        grid-template-columns: repeat(2, fit-content(8ch));
+        grid-template-columns: repeat(2, fit-content(25%));
     }  
 }
 
